Agregando el viewport

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="description" content="Este es un sitio de producto genial">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Aqui podemos poner algún framework -->
 
     <!-- Aqui podemos poner algún framework -->
